# PInvoke

Class Marshalling/: CMakeLists.txt  marshall.cpp  marshall.hpp  test.cpp
Class Marshalling/ClassMarshall/: ClassMarshall.sln  Program.cs
Hello World/HelloWorld/: HelloWorld.sln  Program.cs
Project - 1 (Hello World)/Adder/: Adder.sln  Program.cs
Project - 1 (Hello World)/Libs/: CMakeLists.txt  HelloWorld.cpp
