cmake_minimum_required(VERSION 3.29.0)

project(HelloWorld VERSION 0.1.0 LANGUAGES C CXX)


add_library(HelloWorld SHARED HelloWorld.cpp)


set_target_properties(HelloWorld PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
